[NOID] fix compile errors